[package]
name = "webserver"
version = "0.1.0"
authors = ["HadyElzayady <hadyelzayady@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
# [lib]
# name="lib"
# path="src/lib.rs"
#
# [[bin]]
# name="main"
# path="src/bin/main.rs"
